# tensorRT_engine_v2

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  benchmark_latency.cpp  benchmark_nlp.cpp  benchmark_nlp_report.py  benchmark_report.py  benchmark_throughput.cpp  run_nlp_benchmarks.sh
cmake/: FindTensorRT.cmake
docker/: .dockerignore  Dockerfile.compile  Dockerfile.runtime  README.md  docker-compose.yml
docs/: api_reference.md  benchmark_results.md  deployment_guide.md  developer_guide.md  implementation_plan.md
examples/: basic_inference.cpp  cuda_graph_inference.cpp  dynamic_shapes.cpp  int8_inference.cpp  multi_gpu.cpp  multi_stream.cpp
examples/python/: basic_inference.py  batch_inference.py
include/trt_engine/: batcher.h  builder.h  calibrator.h  cuda_graph.h  cuda_utils.h  engine.h  logger.h  memory.h  model_converter.h  multi_gpu.h  multi_stream.h  profiler.h  trt_engine.h  types.h
python/: CMakeLists.txt  bindings.cpp  setup.py
python/trt_engine/: __init__.py  utils.py
research/: opensource_implementations.md  tensorrt_api_architecture.md  tensorrt_best_practices.md
src/: batcher.cpp  builder.cpp  calibrator.cpp  cuda_graph.cpp  cuda_utils.cpp  engine.cpp  logger.cpp  memory.cpp  model_converter.cpp  multi_gpu.cpp  multi_stream.cpp  profiler.cpp
tests/: CMakeLists.txt  test_batcher.cpp  test_builder.cpp  test_cuda_graph.cpp  test_engine.cpp  test_logger.cpp  test_memory.cpp  test_multi_gpu.cpp  test_nlp_models.cpp  test_python.py
